@@ -1,9 +1,24 @@
-DIST g15macro-1.0.0.tar.bz2 223563 RMD160 69627bcee91ab0e7cefcf861288d545e8b314253 SHA1 7545067405a54e213d6d26fdd3e4f57a59b4b894 SHA256 f77a5ee0d07e15431353012793533784cb46d7fdeab78a68ceaaf2232672f77d
-DIST g15macro-1.0.1.tar.gz 321459 RMD160 8adefc901d9b740f0ec670a68408813324f018a3 SHA1 b31b569bbfc9522438bb84a0ad8f437e91562807 SHA256 1d94911d5da6881fef1e6071d233533b4a3fe9b146c1a1566fdf6155a54ba51e
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST g15macro-1.0.3.tar.gz 324859 RMD160 f96fb40e7b055b8d66eb0dfcfded3fec5a264803 SHA1 fa6758665f042c37bc1a27cf6a7cb4cf2e05dc2f SHA256 be4a5ba422777b330d09169fe505eae433aad7378c2eaf411ea591723b82ace2
-EBUILD g15macro-1.0.0.ebuild 763 RMD160 1b50fe857f00048212284decdd0952165bd02579 SHA1 1b974fe62f6edfcc73790d53bc6180731bd233f2 SHA256 9ee27fc3e61c9bc4e6da9405c9b9369dddd7b395a976fbadb53067f1baa9a3dc
-EBUILD g15macro-1.0.1.ebuild 764 RMD160 97c08f389298f8792ac27ce1baa9c051a696977b SHA1 9830f01c9c432f42c814608d6b077874548c1682 SHA256 2676aef230d8e28ee32c34a458a44ab1c6cc7a40da1b14b8df7f884752344692
-EBUILD g15macro-1.0.3-r1.ebuild 817 RMD160 6a6a90ba1d6eaa4963214fc5c6c9592263c4d5e9 SHA1 1a1555fb235599f6b95b00421995b7b90d8e2616 SHA256 90531e1358dbca6a78526cd7a66a47aedd57f9d59e8ea4375f13dc000aa0cb84
-EBUILD g15macro-1.0.3.ebuild 764 RMD160 5a38549b0e8b63cf3775dd5e4a416a2278d1cd6c SHA1 7394de342d05a69a185798f38f8bab4ec884c775 SHA256 00f981d7f086ef9ff196301dc849f392b3fb1b0555de5d9618110455ebe710ee
-MISC ChangeLog 1241 RMD160 946b509c62576ddc4c7ccd6e49237e2684a0a059 SHA1 3cc5cf1a10e21b090998bda6e577e3d611f17a7c SHA256 b1484b40722f9e9688f703b8e7071a32ec1956505db04dbf19f7c5ed2e7bf97b
+EBUILD g15macro-1.0.3-r1.ebuild 807 RMD160 659408a0737fcb33ab3e00364ff651c976149d30 SHA1 d73d812712d85f8dfefc6be09438bbbe6bfb13ea SHA256 add1eef62d21964ac35b514845ef80135e4e4f0064dc41f4d35d60371d9b03f2
+MISC ChangeLog 1451 RMD160 31f8f399736219ac8e5eab5d14c024f6c23a2a26 SHA1 8fc8bb703ba6174d1750be0805e2b3daa8b716b3 SHA256 1fe0a26770dd6bf6599902bf9de8fd94befd61f62bd4088dcc1c4e62dabda0e4
 MISC metadata.xml 222 RMD160 f3b76907c0789c67d2e3d9d4073a5911aa8ae42f SHA1 792ac055d4a27ee4d9120df34d5390ac3732ab94 SHA256 edd5f0f934fb8e9338e5a0ce8caaae6f6232dfb8cb4e0c0cfbac0363eb42b7c9
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.18 (GNU/Linux)
+
+iQIcBAEBAgAGBQJOxPChAAoJEOSiRoyO7jvoE14P/0zkyO96AtDxLDQD25PXpgF4
+jDksd1G4tzeRql8dfkqJQDBocMdQMJ5Xfoi3wQZF9Fp0iPtM/0uEQfRyqIFBagIE
++Twfdc/u7yiEXpAMI1La/McjSzhr6nBIrEAC8bBBtY2jV9k7KJxJ4IdkW91DRqRU
+3s4rvFrvBfJquAc+tIw19SDYMAMxuB4lNUR69soerxJ6zYUPbv7JDpExEQW0aaMh
+AxBMvaDFtRVrUEs80zlMOaHz6HYlw25KtWD5MIZI6kXbLIRQIzPaz9IDM868557z
+duj/aHSVK5pALVPGMJutKdzfKl5QdPmPJgf/+5EY+r/NvfRj8QRgk1R4BCGscZo5
+EuKApU2ih2PkNAuE8l2fJtmp0ztPGZ/85kE13e+XvcDnqUv8e1FD54lZ2IuGEbUf
+FCafN9ECxmoGyzY5kAZaXbxUGTQt5dUJG/KQA7Ave2ked0hLj5TkqPHTOE7db3oA
+ANRLTf3dImL10OaA49BdQo3P8/AZJWrAKneYZF4tsTSRsQuuzNLNcY3opZp0EtIK
+eL2glbWpd94xzRA+4EMGqH04/LbqPjylvw5LwQ0AE6+gya4GHBbHN04YGfHH8FDy
+ToAz09tPJm039/vIsDIzKYesoe99NoEWiA51E/v++4PgL+q+bk+rKQejKKz2+75t
+SXYmxhWFwT0HgJKouXo1
+=9dLV
+-----END PGP SIGNATURE-----
