@@ -1,8 +1,9 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/g15macro/g15macro-1.0.3-r1.ebuild,v 1.1 2011/11/16 21:43:07 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/g15macro/g15macro-1.0.3-r1.ebuild,v 1.2 2011/11/17 11:31:36 scarabeus Exp $
 
 EAPI=4
+
 DESCRIPTION="Macro recording plugin to G15daemon"
 HOMEPAGE="http://g15daemon.sourceforge.net/"
 SRC_URI="mirror://sourceforge/g15daemon/${P}.tar.gz"
@@ -29,7 +30,5 @@ src_configure() {
 
 src_install() {
 	emake DESTDIR="${D}" install || die "make install failed"
-	rm "${D}"/usr/share/doc/${P}/{COPYING,NEWS}
-
-	prepalldocs
+	rm "${ED}"/usr/share/doc/${P}/{COPYING,NEWS}
 }
