@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/g15macro
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/g15macro/ChangeLog,v 1.8 2011/11/16 21:43:07 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/g15macro/ChangeLog,v 1.9 2011/11/17 11:31:36 scarabeus Exp $
+
+  17 Nov 2011; Tomáš Chvátal <scarabeus@gentoo.org> -g15macro-1.0.0.ebuild,
+  -g15macro-1.0.1.ebuild, -g15macro-1.0.3.ebuild, g15macro-1.0.3-r1.ebuild:
+  Make the 1.0.3-r1 actually emerge and punt older.
 
 *g15macro-1.0.3-r1 (16 Nov 2011)
 
